syntax = "proto3";

package ydbcp.v1alpha1;
option go_package = "github.com/ydb-platform/ydbcp/pkg/proto/ydbcp/v1alpha1;ydbcp";

import "google/protobuf/timestamp.proto";

enum BackupField {
    DATABASE_NAME = 0;
    STATUS = 1;
    CREATED_AT = 2;
    EXPIRE_AT = 3;
    COMPLETED_AT = 4;
}

message EncryptionSettings {

    enum Algorithm {
        UNSPECIFIED = 0;
        AES_128_GCM = 1;
        AES_256_GCM = 2;
        CHACHA20_POLY1305 = 3;
    }

    // Algorithm for backup encryption
    Algorithm algorithm = 1;

    message KmsKey {
        // The KMS key ID that should be used to encrypt the DEK (data encryption key).
        string key_id = 1;
    }

    oneof KeyEncryptionKey {
        KmsKey kms_key = 2;
    }
}

message Backup {
    enum Status {
        STATUS_UNSPECIFIED = 0;
        PENDING = 1;
        AVAILABLE = 2;
        ERROR = 3;
        CANCELLED = 4;
        DELETED = 5;
        RUNNING = 6;
        DELETING = 7;
    }
    // Unique identifier for the backup.
    string id = 1;
    // An identifier of an external resource which holds the record about the backup
    // (it can be the container id where the database is located).
    string container_id = 2;
    // Name of the database for which the backup was created.
    string database_name = 3;
    // GRPC endpoint of the database.
    string database_endpoint = 4;
    // S3 location where the backup is stored.
    S3Location location = 5;
    // Audit information for the backup.
    AuditInfo audit = 6;
    // Size of the backup in bytes.
    int64 size = 7;
    // Current status of the backup.
    Status status = 8;
    // Message associated with the backup status.
    string message = 9;
    // Timestamp when the backup will expire.
    google.protobuf.Timestamp expire_at = 10;
    // Unique identifier for the schedule that initiated the backup.
    string schedule_id = 11;
    // List of source paths included in the backup (empty list means backup of root directory).
    repeated string source_paths = 12;  // [(size) = "<=256"];
    // Backup encryption settings,
    // unspecified field means the backup is unencrypted.
    EncryptionSettings encryption_settings = 13;
}

message S3Location {
    // S3 endpoint.
    string endpoint = 1;
    // S3 bucket name.
    string bucket = 2;
    // S3 region.
    string region = 3;
    // Path prefix in the S3 bucket.
    string path_prefix = 4;
}

message AuditInfo {
    // Creator of the backup, YDBCP receives this info from the IAM.
    string creator = 1;
    // Timestamp when the TakeBackup operation was created.
    google.protobuf.Timestamp created_at = 2;
    // Timestamp when the TakeBackup operation was completed.
    google.protobuf.Timestamp completed_at = 3;
}